# rag-knowledge-qa

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.trae/skills/code-reviewer/: SKILL.md
chains/: graph_chain.py  source_detection.py
config/: prompts.py  settings.py
core/: __init__.py  context_builder.py  embeddings.py  graph_store.py  llm.py  memory.py  memory_manager.py  retriever_factory.py  vector_store.py
core/agent/: __init__.py  base.py  rag_agent.py  types.py
core/context/: __init__.py  builder.py  strategies.py  types.py
core/doc/: __init__.py  doc_id_registry.py  document_chunk.py  document_loader.py
core/infrastructure/: __init__.py  embeddings.py  graph_store.py  llm.py  reranker.py  vector_store.py
core/memory/: __init__.py  manager.py  short_term.py
core/memory/long_term/: __init__.py  config.py  episodic.py  scoring.py  semantic.py  working.py
core/memory_system/: __init__.py  config.py  episodic.py  scoring.py  semantic.py  working.py
core/retrievers/: __init__.py  base.py  bm25.py  enhanced.py  factory.py  filtering.py  hybrid.py  hyde.py  multi_query.py
core/tools/: __init__.py  base.py  pipeline.py  rag_tools.py  registry.py
data/: _eval_output.txt  doc_id_registry.example.json  test_question_example.json  test_question_ragas.json
evaluation/: __init__.py  ragas_metrics.py  reporter.py  runner.py  synthetic.py  testset.py
evaluation/metrics/: __init__.py  generation.py  performance.py  retrieval.py  types.py
scripts/: _check_llm_survey.py  _check_status.py  _eval_now.py  _generate_testset.py  _reingest_baipishu.py  ingest_docs.py  init_db.py  rebuild_collection.py
services/: document_service.py  qa_service.py  rate_limit.py  session.py
tests/: conftest.py
tests/integration/: test_qa_pipeline.py
tests/unit/: test_agent.py  test_cache.py  test_context_builder.py  test_retrievers.py  test_tools.py
utils/: cache.py  device.py  logger.py  redis_client.py  token_utils.py
web/: gradio_app.py  ui_admin.py  ui_chat.py  ui_handlers.py  ui_upload.py
